TicTacToe Service, Repository, AppService and Controller basic methods Shuffle Unscramble exercises Creation

--- a/CreatingAPI.Domain/CreatingAPI.Domain.csproj
+++ b/CreatingAPI.Domain/CreatingAPI.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Unscrambles\ValueObjects\ShuffledExercise.cs~RF5450369.TMP" />
     <None Remove="Users\Services\UserService.cs~RFae94053.TMP" />
   </ItemGroup>
 
