Quizzes classes creation

--- a/CreatingAPI.Application/CreatingAPI.Application.csproj
+++ b/CreatingAPI.Application/CreatingAPI.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\CreatingAPI.Domain\CreatingAPI.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Quizzes\ViewModels\" />
+  </ItemGroup>
+
 </Project>
