Creation of environments Creation of SwaggerConfig Creation of method to return all activities of an user

--- a/CreatingAPI/CreatingAPI.csproj
+++ b/CreatingAPI/CreatingAPI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>df346a1a-960d-4a83-959b-7cbf14d4a2ed</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
