--- a/CreatingAPI/appsettings.Development.json
+++ b/CreatingAPI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CreatingDbContext": "Server=(localdb)\\mssqllocaldb;Database=Creating.Demo;Trusted_Connection=True;"
   }
 }
